# posture-reminder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile.sh  main.cpp  posture_reminder  pulse.cpp
